<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Setting_view1"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="top"
    android:layout_marginBottom="@dimen/tile_padding"
    android:layout_marginTop="@dimen/tile_padding"
    android:layout_marginLeft="@dimen/null_dp"
    android:layout_marginRight="@dimen/null_dp"
    android:foreground="?attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/card_title_backround"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@color/reported_green"
            android:scaleType="centerCrop">

        </RelativeLayout>

        <TextView
            android:id="@+id/eth_setting"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/md_keylines"
            android:layout_marginRight="@dimen/md_keylines"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:text="@string/eth_settings"
            tools:text="@string/eth_settings" />

        <TextView
            android:id="@+id/miner_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/eth_setting"
            android:layout_alignTop="@+id/link_edit_site"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/miner_settings"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            tools:text="@string/miner_settings" />

        <TextView
            android:id="@+id/line_two"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignStart="@+id/eth_setting"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/send_a_mail_if_one_of_my_workers_goes_offline"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            tools:text="@string/send_a_mail_if_one_of_my_workers_goes_offline" />


        <Button
            android:id="@+id/buttonOk"
            android:layout_width="51dp"
            android:layout_height="38dp"
            android:layout_alignEnd="@+id/link_edit_site"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp"
            android:text="@string/ok" />

        <TextView
            android:id="@+id/link_edit_site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="99dp"
            android:fontFamily="@font/roboto"
            android:gravity="right"
            android:text="@string/edit_on_ethermine_org"
            android:textSize="16sp"
            tools:text="@string/edit_on_ethermine_org" />

        <CheckBox
            android:id="@+id/checkBoxMonitor"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignEnd="@+id/eth_setting"
            android:layout_centerVertical="true"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/line_tree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/eth_setting"
            android:layout_marginBottom="111dp"
            android:layout_marginStart="0dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/email_address"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/email_address" />

        <TextView
            android:id="@+id/line_tree_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/link_edit_site"
            android:layout_alignTop="@+id/line_tree"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/tire"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/tire" />


        <TextView
            android:id="@+id/line_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/eth_setting"
            android:layout_marginBottom="65dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/payment_threshold"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/payment_threshold" />


        <TextView
            android:id="@+id/line_payment_eth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/link_edit_site"
            android:layout_alignTop="@+id/line_payment"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/tire"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/tire" />


        <TextView
            android:id="@+id/line_public_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/eth_setting"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/public_ip_address"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/public_ip_address" />

        <TextView
            android:id="@+id/line_public_ip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/link_edit_site"
            android:layout_alignTop="@+id/line_public_ip"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:singleLine="true"
            android:text="@string/tire"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/article_subheading"
            tools:text="@string/tire" />

        <EditText
            android:id="@+id/wallet_adr"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/eth_setting"
            android:layout_alignTop="@+id/buttonOk"
            android:layout_marginStart="0dp"
            android:ems="10"
            android:hint="@string/wallet_address_eth"
            android:inputType="textPersonName"
            android:singleLine="false"
            android:textSize="14sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>